--- a/payloads/external/edk2/Makefile
+++ b/payloads/external/edk2/Makefile
@@ -52,19 +52,19 @@ BUILD_STR += -D CPU_TIMER_LIB_ENABLE=FALSE
 else
 BUILD_STR += --pcd gUefiCpuPkgTokenSpaceGuid.PcdCpuCoreCrystalClockFrequency=$(CONFIG_CPU_XTAL_HZ)
 endif
-# DISABLE_SERIAL_TERMINAL	= FALSE
-ifneq ($(CONFIG_EDK2_SERIAL_SUPPORT),y)
-BUILD_STR += -D DISABLE_SERIAL_TERMINAL=TRUE
+# SERIAL_TERMINAL	= TRUE
+ifeq ($(CONFIG_EDK2_SERIAL_SUPPORT),y)
+BUILD_STR += -D SERIAL_TERMINAL=TRUE
 endif
 # FOLLOW_BGRT_SPEC		= FALSE
 ifeq ($(CONFIG_EDK2_FOLLOW_BGRT_SPEC),y)
 BUILD_STR += -D FOLLOW_BGRT_SPEC=TRUE
 endif
-# PCIE_BASE_ADDRESS		= 0
+# PCIE_BASE_ADDRESS            = 0
 ifneq ($(CONFIG_ECAM_MMCONF_LENGTH),)
 BUILD_STR += --pcd gEfiMdePkgTokenSpaceGuid.PcdPciExpressBaseAddress=$(CONFIG_ECAM_MMCONF_BASE_ADDRESS)
 endif
-# PCIE_BASE_LENGTH		= 0
+# PCIE_BASE_LENGTH             = 0
 ifneq ($(CONFIG_ECAM_MMCONF_LENGTH),)
 BUILD_STR += --pcd gEfiMdePkgTokenSpaceGuid.PcdPciExpressBaseSize=$(CONFIG_ECAM_MMCONF_LENGTH)
 endif
@@ -96,6 +96,33 @@ endif
 ifneq ($(CONFIG_EDK2_SD_MMC_TIMEOUT),)
 BUILD_STR += -D SD_MMC_TIMEOUT=$(shell echo $$(( $(CONFIG_EDK2_SD_MMC_TIMEOUT) * 1000)) )
 endif
+# NETWORK_IPXE                  = FALSE
+ifeq ($(CONFIG_EDK2_IPXE),y)
+BUILD_STR += -D NETWORK_IPXE=TRUE
+endif
+# SECURE_BOOT_ENABLE            = TRUE
+ifeq ($(CONFIG_EDK2_SECURE_BOOT),y)
+BUILD_STR += -D SECURE_BOOT_ENABLE=TRUE
+endif
+# SECURE_BOOT_DEFAULT_ENABLE	= TRUE
+ifneq ($(CONFIG_EDK2_SECURE_BOOT_DEFAULT_ENABLE),y)
+BUILD_STR += -D SECURE_BOOT_DEFAULT_ENABLE=FALSE
+endif
+# SATA_PASSWORD_ENABLE		= TRUE
+ifeq ($(CONFIG_EDK2_SATA_PASSWORD),y)
+BUILD_STR += -D SATA_PASSWORD_ENABLE=TRUE
+endif
+# OPAL_PASSWORD_ENABLE		= TRUE
+ifeq ($(CONFIG_EDK2_OPAL_PASSWORD),y)
+BUILD_STR += -D OPAL_PASSWORD_ENABLE=TRUE
+endif
+# TPM_ENABLE		= TRUE
+ifeq ($(CONFIG_EDK2_TPM_ENABLE),y)
+BUILD_STR += -D TPM_ENABLE=TRUE
+endif
+
+BUILD_STR += -D BOOT_MENU_KEY=$(CONFIG_EDK2_BOOT_MENU_KEY)
+BUILD_STR += -D SETUP_MENU_KEY=$(CONFIG_EDK2_SETUP_MENU_KEY)
 
 #
 # EDKII has the below PCDs that are relevant to coreboot:
@@ -145,10 +172,10 @@ $(EDK2_PATH): $(WORKSPACE)
 logo: $(EDK2_PATH)
 	case "$(CONFIG_EDK2_BOOTSPLASH_FILE)" in \
 		"") ;; \
-		/*) convert -background None $(CONFIG_EDK2_BOOTSPLASH_FILE) \
-			BMP3:$(EDK2_PATH)/MdeModulePkg/Logo/Logo.bmp;; \
-		*) convert -background None $(top)/$(CONFIG_EDK2_BOOTSPLASH_FILE) \
-			BMP3:$(EDK2_PATH)/MdeModulePkg/Logo/Logo.bmp;; \
+		/*) cp $(CONFIG_EDK2_BOOTSPLASH_FILE) \
+				$(project_dir)/MdeModulePkg/Logo/Logo.bmp;; \
+		*) cp $(top)/$(CONFIG_EDK2_BOOTSPLASH_FILE) \
+				$(project_dir)/MdeModulePkg/Logo/Logo.bmp;; \
 	esac \
 
 checktools:
@@ -162,15 +189,6 @@ checktools:
 	echo -n "EDK2: Checking nasm:"
 	type nasm > /dev/null 2>&1 && echo "        Found!" || \
 		( echo "        Not found!"; echo "ERROR: Please install nasm."; exit 1 )
-	echo -n "EDK2: Checking imagemagick:"
-	-convert -size 1x1 xc: test.png &> /dev/null;
-	if [ -f test.png ]; then \
-		rm test.png && echo " Found!"; \
-	else \
-		echo " Not found!"; \
-		echo "ERROR: Please install imagemagick"; \
-		exit 1; \
-	fi
 
 print:
 	echo "   ##### $(project_name) Build Summary #####"
