Fit payload building (#67)
* Prepare files for building FIT payload

* payloads/external/skiboot: include choice in menu

* payloads/external/skiboot: Add building of uImage

* payloads/external/skiboot: Include skiboot in build

* Select correct compression algorithm

* Change ROM size to 2048 and fix skiboot cleaning

* Fixes after review part 1

* Add cleaning of fdt.bin

* Add board-specific options to Kconfig

* Build skiboot payload intermediate files inside build directory

* Fix skiboot clean

Co-authored-by: Krystian Hebel <krystian.hebel@3mdeb.com>

--- a/payloads/external/Makefile.inc
+++ b/payloads/external/Makefile.inc
@@ -373,8 +373,9 @@ payloads/external/BOOTBOOT/bootboot/dist/bootbootcb.elf:
 
 # skiboot
 
-payloads/external/skiboot/build/skiboot.elf:
+payloads/external/skiboot/build/skiboot.uimage:
 	$(MAKE) -C payloads/external/skiboot all \
+		CONFIG_SKIBOOT_DEVICE_TREE=$(CONFIG_SKIBOOT_DEVICE_TREE) \
 		CONFIG_SKIBOOT_GIT_REPO=$(CONFIG_SKIBOOT_GIT_REPO) \
 		CONFIG_SKIBOOT_REVISION=$(CONFIG_SKIBOOT_REVISION)
 # COREDOOM
