mb/raptor-cs/talos-2: allow using skiboot payload
Change-Id: Id9d85981eb59cb8e69e1e044891a6b20a6f98a00
Signed-off-by: Igor Bagnucki <bagnucki02@gmail.com>

--- a/payloads/external/skiboot/Kconfig
+++ b/payloads/external/skiboot/Kconfig
@@ -7,13 +7,15 @@ config PAYLOAD_FILE
 
 config SKIBOOT_GIT_REPO
 	string "Git repository of skiboot payload"
-	default "https://github.com/open-power/skiboot"
+	default "https://github.com/open-power/skiboot" if !BOARD_RAPTOR_CS_TALOS_2
+	default "https://git.raptorcs.com/git/talos-skiboot" if BOARD_RAPTOR_CS_TALOS_2
 	help
 	  Git repository which will be used to clone skiboot.
 
 config SKIBOOT_REVISION
 	string "Revision of skiboot payload"
 	default "d93ddbd39b4eeac0bc11dacbdadea76df2996c13" if BOARD_EMULATION_QEMU_POWER9
+	default "9858186353f2203fe477f316964e03609d12fd1d" if BOARD_RAPTOR_CS_TALOS_2
 	help
 	  Revision, that skiboot repository will be checked out to, before building
 	  an image.
