--- a/payloads/external/edk2/Kconfig
+++ b/payloads/external/edk2/Kconfig
@@ -118,7 +118,7 @@ config EDK2_BOOTSPLASH_FILE
 
 config EDK2_BOOT_MANAGER_ESCAPE
 	bool "Use Escape key for Boot Manager"
-	default n
+	default y
 	help
 	  Use Escape as the hot-key to access the Boot Manager. This replaces
 	  the default key of F2.
@@ -141,7 +141,7 @@ config EDK2_CBMEM_LOGGING
 
 config EDK2_FOLLOW_BGRT_SPEC
 	bool "Center logo 38.2% from the top of screen"
-	default n
+	default y
 	help
 	  Follow the BGRT Specification implemented by Microsoft and
 	  the Boot Logo 38.2% will be vertically centered 38.2% from
