fix wording for the new Secure Boot default state Kconfig option
Previous wording did not explain fully what this option does.

Co-authored-by: Michał Żygowski <michal.zygowski@3mdeb.com>
Signed-off-by: Michał Kopeć <michal.kopec@3mdeb.com>

--- a/payloads/external/tianocore/Kconfig
+++ b/payloads/external/tianocore/Kconfig
@@ -202,10 +202,10 @@ config TIANOCORE_SECURE_BOOT
 if TIANOCORE_SECURE_BOOT
 
 config TIANOCORE_SECURE_BOOT_DEFAULT_ENABLE
-	bool "Enable Secure Boot by default"
+	bool "Set Secure Boot state to enabled by default"
 	default y
 	help
-	  Enables UEFI Secure Boot by default.
+	  Sets the UEFI Secure Boot state to enabled by default.
 
 endif
 
