--- a/payloads/external/edk2/Makefile
+++ b/payloads/external/edk2/Makefile
@@ -100,6 +100,10 @@ endif
 ifeq ($(CONFIG_EDK2_TPM_ENABLE),y)
 BUILD_STR += -D TPM_ENABLE=TRUE
 endif
+# DASHARO_SYSTEM_FEATURES		= FALSE
+ifeq ($(CONFIG_EDK2_DASHARO_SYSTEM_FEATURES),y)
+BUILD_STR += -D DASHARO_SYSTEM_FEATURES_ENABLE=TRUE
+endif
 
 BUILD_STR += -D BOOT_MENU_KEY=$(CONFIG_EDK2_BOOT_MENU_KEY)
 BUILD_STR += -D SETUP_MENU_KEY=$(CONFIG_EDK2_SETUP_MENU_KEY)
