--- a/payloads/external/Makefile.inc
+++ b/payloads/external/Makefile.inc
@@ -181,8 +181,8 @@ $(obj)/UEFIPAYLOAD.fd edk2: $(DOTCONFIG)
 		CONFIG_ECAM_MMCONF_BASE_ADDRESS=$(CONFIG_ECAM_MMCONF_BASE_ADDRESS) \
 		CONFIG_ECAM_MMCONF_LENGTH=$(CONFIG_ECAM_MMCONF_LENGTH) \
 		CONFIG_SMMSTORE_V2=$(CONFIG_SMMSTORE_v2) \
-		CONFIG_EDK2_GOP_DRIVER=$(CONFIG_TIANOCORE_GOP_DRIVER) \
-		CONFIG_EDK2_GOP_FILE=$(CONFIG_TIANOCORE_GOP_FILE) \
+		CONFIG_EDK2_GOP_DRIVER=$(CONFIG_EDK2_GOP_DRIVER) \
+		CONFIG_EDK2_GOP_FILE=$(CONFIG_EDK2_GOP_FILE) \
 		CONFIG_EDK2_VBT_FILE=$(CONFIG_INTEL_GMA_VBT_FILE) \
 		GCC_CC_x86_32=$(GCC_CC_x86_32) \
 		GCC_CC_x86_64=$(GCC_CC_x86_64) \
