payloads/external/edk2/Kconfig: add serial dependency on not CBMEM logging
Signed-off-by: Michał Żygowski <michal.zygowski@3mdeb.com>

--- a/payloads/external/edk2/Kconfig
+++ b/payloads/external/edk2/Kconfig
@@ -236,6 +236,7 @@ config EDK2_SD_MMC_TIMEOUT
 
 config EDK2_SERIAL_SUPPORT
 	bool "Support serial output"
+	depends on !EDK2_CBMEM_LOGGING
 	default y if EDK2_DEBUG
 	default n
 	help
