payloads/external/edk2: Integrate custom LAN driver
Signed-off-by: Michał Żygowski <michal.zygowski@3mdeb.com>

--- a/payloads/external/Makefile.inc
+++ b/payloads/external/Makefile.inc
@@ -186,6 +186,7 @@ $(obj)/UEFIPAYLOAD.fd: $(DOTCONFIG)
 		CONFIG_EDK2_SETUP_MENU_KEY=$(CONFIG_EDK2_SETUP_MENU_KEY) \
 		CONFIG_EDK2_SD_MMC_TIMEOUT=$(CONFIG_EDK2_SD_MMC_TIMEOUT) \
 		CONFIG_EDK2_TPM_ENABLE=$(CONFIG_TPM1)$(CONFIG_TPM2) \
+		CONFIG_EDK2_LAN_ROM_DRIVER=$(CONFIG_EDK2_LAN_ROM_DRIVER) \
 		CONFIG_ECAM_MMCONF_BASE_ADDRESS=$(CONFIG_ECAM_MMCONF_BASE_ADDRESS) \
 		CONFIG_ECAM_MMCONF_LENGTH=$(CONFIG_ECAM_MMCONF_LENGTH) \
 		CONFIG_SMMSTORE_V2=$(CONFIG_SMMSTORE_v2) \
