--- a/payloads/external/iPXE/Kconfig
+++ b/payloads/external/iPXE/Kconfig
@@ -10,6 +10,7 @@ menu "PXE Options"
 
 choice
 	prompt "PXE ROM to use"
+	default BUILD_IPXE if EDK2_ENABLE_IPXE
 	default PXE_ROM
 
 config PXE_ROM
@@ -69,7 +70,9 @@ config PXE_ROM_ID
 
 config PXE_SERIAL_CONSOLE
 	bool "Enable iPXE serial console"
-	def_bool y
+	default n if SEABIOS_SERCON_PORT
+	default n if EDK2_ENABLE_IPXE
+	default y
 	help
 	  Enable/disable iPXE serial console. Since SeaBIOS supports serial
 	  console this option might be helpful to avoid duplicated output.
