payloads/external/edk2: build iPXE for EDK2 with custom boot option name
Signed-off-by: Michał Żygowski <michal.zygowski@3mdeb.com>
Change-Id: I6f4020b07a1df6cc99d65d828a3e967e49c1b365

--- a/payloads/external/Makefile.inc
+++ b/payloads/external/Makefile.inc
@@ -154,7 +154,12 @@ payloads/external/depthcharge/depthcharge/build/depthcharge.elf depthcharge: $(D
 
 # edk2
 
-$(obj)/UEFIPAYLOAD.fd edk2: $(DOTCONFIG)
+
+ifeq ($(CONFIG_EDK2_ENABLE_IPXE),y)
+IPXE_EFI := payloads/external/iPXE/ipxe/ipxe.rom
+endif
+
+$(obj)/UEFIPAYLOAD.fd edk2: $(DOTCONFIG) $(IPXE_EFI)
 	$(MAKE) -C payloads/external/edk2 all \
 		HOSTCC="$(HOSTCC)" \
 		CC="$(HOSTCC)" \
@@ -177,6 +182,7 @@ $(obj)/UEFIPAYLOAD.fd edk2: $(DOTCONFIG)
 		CONFIG_EDK2_FULL_SCREEN_SETUP=$(CONFIG_EDK2_FULL_SCREEN_SETUP) \
 		CONFIG_EDK2_HAVE_EFI_SHELL=$(CONFIG_EDK2_HAVE_EFI_SHELL) \
 		CONFIG_EDK2_IPXE=$(CONFIG_EDK2_ENABLE_IPXE) \
+		CONFIG_EDK2_IPXE_OPTION_NAME=$(CONFIG_EDK2_IPXE_OPTION_NAME) \
 		CONFIG_EDK2_OPAL_PASSWORD=$(CONFIG_EDK2_OPAL_PASSWORD) \
 		CONFIG_EDK2_PRIORITIZE_INTERNAL=$(CONFIG_EDK2_PRIORITIZE_INTERNAL) \
 		CONFIG_EDK2_PS2_SUPPORT=$(CONFIG_EDK2_PS2_SUPPORT) \
@@ -309,9 +315,11 @@ else
 IPXE_SERIAL_CONSOLE = n
 endif
 
+ifneq ($(CONFIG_EDK2_ENABLE_IPXE),y)
 cbfs-files-$(CONFIG_PXE_ROM)$(CONFIG_BUILD_IPXE) += pci$(CONFIG_PXE_ROM_ID).rom
 pci$(CONFIG_PXE_ROM_ID).rom-file := $(PXE_ROM_FILE)
 pci$(CONFIG_PXE_ROM_ID).rom-type := raw
+endif
 
 payloads/external/iPXE/ipxe/ipxe.rom ipxe: $(DOTCONFIG) $(PXE_CONFIG_SCRIPT)
 	$(MAKE) -C payloads/external/iPXE all \
@@ -327,6 +335,7 @@ payloads/external/iPXE/ipxe/ipxe.rom ipxe: $(DOTCONFIG) $(PXE_CONFIG_SCRIPT)
 	CONFIG_PXE_NO_PROMPT=$(CONFIG_PXE_NO_PROMPT) \
 	CONFIG_PXE_HAS_HTTPS=$(CONFIG_PXE_HAS_HTTPS) \
 	CONFIG_PXE_CUSTOM_BUILD_ID=$(CONFIG_PXE_CUSTOM_BUILD_ID) \
+	CONFIG_IPXE_BUILD_EFI=$(CONFIG_EDK2_ENABLE_IPXE) \
 	MFLAGS= MAKEFLAGS=
 
 # LinuxBoot
