payloads/external: fix build problems
Signed-off-by: Michał Żygowski <michal.zygowski@3mdeb.com>

--- a/payloads/external/Makefile.inc
+++ b/payloads/external/Makefile.inc
@@ -316,11 +316,15 @@ ifneq ($(CONFIG_EDK2_ENABLE_IPXE),y)
 cbfs-files-$(CONFIG_PXE_ROM)$(CONFIG_BUILD_IPXE) += pci$(CONFIG_PXE_ROM_ID).rom
 pci$(CONFIG_PXE_ROM_ID).rom-file := $(PXE_ROM_FILE)
 pci$(CONFIG_PXE_ROM_ID).rom-type := raw
+IPXE_CROSS_COMPILE:="$(CROSS_COMPILE_$(ARCH-ramstage-y))"
+else
+IPXE_CROSS_COMPILE:=$(CROSS_COMPILE_x86_64)
 endif
 
 payloads/external/iPXE/ipxe/ipxe.rom ipxe: $(DOTCONFIG) $(PXE_CONFIG_SCRIPT)
 	$(MAKE) -C payloads/external/iPXE all \
-	CROSS_COMPILE="$(CROSS_COMPILE_$(ARCH-ramstage-y))" \
+	CROSS_COMPILE=$(IPXE_CROSS_COMPILE) \
+	CFLAGS_x86_64="$(CFLAGS_x86_64)" \
 	PXE_ROM_PCI_ID=$(PXE_ROM_PCI_ID) \
 	CONFIG_IPXE_MASTER=$(CONFIG_IPXE_MASTER) \
 	CONFIG_IPXE_STABLE=$(CONFIG_IPXE_STABLE) \
