payloads/external: fix build problems
Signed-off-by: Michał Żygowski <michal.zygowski@3mdeb.com>
Change-Id: I726f5c8d54f9b81b397eabde57d4e99d79a8804e

--- a/payloads/external/edk2/Makefile
+++ b/payloads/external/edk2/Makefile
@@ -177,7 +177,8 @@ lan_rom: $(project_dir)
 	esac \
 
 ipxe_rom: $(project_dir)
-	if [ "$(CONFIG_EDK2_IPXE)" -eq "y" ]; then \
+	if [ "$(CONFIG_EDK2_IPXE)" == "y" ]; then \
+		echo "    Including externally built iPXE"; \
 		cp $(top)/payloads/external/iPXE/ipxe/ipxe.rom \
 			$(project_dir)/UefiPayloadPkg/NetworkDrivers/ipxe.efi; \
 	fi \
