payloads/external/edk2: Add MTRR programming option
Signed-off-by: Michał Żygowski <michal.zygowski@3mdeb.com>

--- a/payloads/external/Makefile.inc
+++ b/payloads/external/Makefile.inc
@@ -195,6 +195,7 @@ $(obj)/UEFIPAYLOAD.fd: $(DOTCONFIG) $(IPXE_EFI)
 		CONFIG_EDK2_SECURE_BOOT=$(CONFIG_EDK2_SECURE_BOOT) \
 		CONFIG_EDK2_SECURE_BOOT_DEFAULT_ENABLE=$(CONFIG_EDK2_SECURE_BOOT_DEFAULT_ENABLE) \
 		CONFIG_EDK2_SETUP_MENU_KEY=$(CONFIG_EDK2_SETUP_MENU_KEY) \
+		CONFIG_EDK2_DISABLE_MTRR_PROGRAMMING=$(CONFIG_EDK2_DISABLE_MTRR_PROGRAMMING) \
 		CONFIG_EDK2_SD_MMC_TIMEOUT=$(CONFIG_EDK2_SD_MMC_TIMEOUT) \
 		CONFIG_EDK2_TPM_ENABLE=$(CONFIG_TPM1)$(CONFIG_TPM2) \
 		CONFIG_EDK2_LAN_ROM_DRIVER=$(CONFIG_EDK2_LAN_ROM_DRIVER) \
