--- a/payloads/external/edk2/Makefile
+++ b/payloads/external/edk2/Makefile
@@ -136,10 +136,14 @@ endif
 ifeq ($(CONFIG_EDK2_TPM_ENABLE),y)
 BUILD_STR += -D TPM_ENABLE=TRUE
 endif
+# NETWORK_LAN_ROM		= FALSE
 ifneq ($(CONFIG_EDK2_LAN_ROM_DRIVER),)
 BUILD_STR += -D NETWORK_LAN_ROM=TRUE
 endif
-
+# DISABLE_MTRR_PROGRAMMING	= TRUE
+ifneq ($(CONFIG_EDK2_DISABLE_MTRR_PROGRAMMING),y)
+BUILD_STR += -D DISABLE_MTRR_PROGRAMMING=FALSE
+endif
 
 BUILD_STR += -D BOOT_MENU_KEY=$(CONFIG_EDK2_BOOT_MENU_KEY)
 BUILD_STR += -D SETUP_MENU_KEY=$(CONFIG_EDK2_SETUP_MENU_KEY)
