payloads/external/edk2: Add MTRR programming option
Signed-off-by: Michał Żygowski <michal.zygowski@3mdeb.com>

--- a/payloads/external/edk2/Makefile
+++ b/payloads/external/edk2/Makefile
@@ -124,7 +124,10 @@ endif
 ifneq ($(CONFIG_EDK2_LAN_ROM_DRIVER),)
 BUILD_STR += -D NETWORK_LAN_ROM=TRUE
 endif
-
+# DISABLE_MTRR_PROGRAMMING	= TRUE
+ifneq ($(CONFIG_EDK2_DISABLE_MTRR_PROGRAMMING),y)
+BUILD_STR += -D DISABLE_MTRR_PROGRAMMING=FALSE
+endif
 
 BUILD_STR += -D BOOT_MENU_KEY=$(CONFIG_EDK2_BOOT_MENU_KEY)
 BUILD_STR += -D SETUP_MENU_KEY=$(CONFIG_EDK2_SETUP_MENU_KEY)
