payloads/external/edk2/Makefile: add missing LAN ROM default comment
Signed-off-by: Michał Żygowski <michal.zygowski@3mdeb.com>

--- a/payloads/external/edk2/Makefile
+++ b/payloads/external/edk2/Makefile
@@ -121,6 +121,7 @@ endif
 ifeq ($(CONFIG_EDK2_TPM_ENABLE),y)
 BUILD_STR += -D TPM_ENABLE=TRUE
 endif
+# NETWORK_LAN_ROM		= FALSE
 ifneq ($(CONFIG_EDK2_LAN_ROM_DRIVER),)
 BUILD_STR += -D NETWORK_LAN_ROM=TRUE
 endif
