--- a/payloads/external/edk2/Makefile
+++ b/payloads/external/edk2/Makefile
@@ -144,6 +144,30 @@ endif
 ifneq ($(CONFIG_EDK2_DISABLE_MTRR_PROGRAMMING),y)
 BUILD_STR += -D DISABLE_MTRR_PROGRAMMING=FALSE
 endif
+# DASHARO_SECURITY_OPTIONS	= FALSE
+ifeq ($(CONFIG_EDK2_DASHARO_SECURITY_OPTIONS),y)
+BUILD_STR += --pcd gDasharoSystemFeaturesTokenSpaceGuid.PcdShowSecurityMenu=TRUE
+endif
+# DASHARO_INTEL_ME_OPTIONS	= FALSE
+ifeq ($(CONFIG_EDK2_DASHARO_INTEL_ME_OPTIONS),y)
+BUILD_STR += --pcd gDasharoSystemFeaturesTokenSpaceGuid.PcdShowIntelMeMenu=TRUE
+endif
+# DASHARO_NETWORK_CONFIG	= FALSE
+ifeq ($(CONFIG_EDK2_DASHARO_NETWORK_CONFIG),y)
+BUILD_STR += --pcd gDasharoSystemFeaturesTokenSpaceGuid.PcdShowNetworkMenu=TRUE
+endif
+# DASHARO_USB_CONFIG	= FALSE
+ifeq ($(CONFIG_EDK2_DASHARO_USB_CONFIG),y)
+BUILD_STR += --pcd gDasharoSystemFeaturesTokenSpaceGuid.PcdShowUsbMenu=TRUE
+endif
+# DASHARO_CHIPSET_CONFIG	= FALSE
+ifeq ($(CONFIG_EDK2_DASHARO_CHIPSET_CONFIG),y)
+BUILD_STR += --pcd gDasharoSystemFeaturesTokenSpaceGuid.PcdShowChipsetMenu=TRUE
+endif
+# DASHARO_NETWORK_BOOT_DEFAULT_ENABLE	= FALSE
+ifeq ($(CONFIG_EDK2_DASHARO_NETWORK_BOOT_DEFAULT_ENABLE),y)
+BUILD_STR += --pcd gDasharoSystemFeaturesTokenSpaceGuid.PcdDefaultNetworkBootEnable=TRUE
+endif
 
 BUILD_STR += -D BOOT_MENU_KEY=$(CONFIG_EDK2_BOOT_MENU_KEY)
 BUILD_STR += -D SETUP_MENU_KEY=$(CONFIG_EDK2_SETUP_MENU_KEY)
